samples/_failures_safe/1761603810_4cb535_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_90107ecf.c: In function ‘main’:
./samples/SAFE/__tmp_90107ecf.c:130:20: error: missing terminating " character
  130 |             printf("Invalid format. Use
      |                    ^~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_90107ecf.c:130:13: error: expected expression at end of input
  130 |             printf("Invalid format. Use
      |             ^~~~~~
./samples/SAFE/__tmp_90107ecf.c:130:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_90107ecf.c:130:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_90107ecf.c:130:13: error: expected declaration or statement at end of input
